# gcalsync

./: .gitignore  README.md  pyproject.toml
src/gcalsync/: auth.py  calendar.py  cli.py  people.py  utils.py
